# midi2mqtt

./: .gitignore  README.md  midi2mqtt.py  pyproject.toml  setup.py
midi2mqtt/: config.py  midi.ini  midi2mqtt.py
