[tool.poetry]
name = "midi2mqtt"
version = "0.0.4"
description = "Receive MIDI signals and forward them to a mqtt broker."
authors = ["Pintman <pintman@0xabc.de>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/pintman/midi2mqtt"
# See https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers=[
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    'Development Status :: 3 - Alpha',

    # Indicate who your project is intended for
    #'Intended Audience :: Developers',
    #'Topic :: Software Development :: Build Tools',

    # Pick your license as you wish (should match "license" above)
    #'License :: OSI Approved :: MIT License',

    # Specify the Python versions you support here. In particular, ensure
    # that you indicate whether you support Python 2, Python 3 or both.
    #'Programming Language :: Python :: 2',
    #'Programming Language :: Python :: 2.7',
    'Programming Language :: Python :: 3',
    #'Programming Language :: Python :: 3.3',
    #'Programming Language :: Python :: 3.4',
    #'Programming Language :: Python :: 3.5',
]
keywords = ["mqtt", "midi"]

[tool.poetry.dependencies]
python = "^3.7"
paho-mqtt = "^1.6.0"
python-rtmidi = "^1.4.9"

[tool.poetry.dev-dependencies]
pylint = "^2.11.1"

[tool.poetry.scripts]
midi2mqtt = "midi2mqtt.midi2mqtt:main"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
